[package]
name = "liquid-staking"
version = "0.0.0"
authors = ["Dharitri <contact@dharitri.org>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.dharitri-sc]
version = "0.54.4"

[dependencies.dharitri-sc-modules]
version = "0.54.4"

[dependencies.delegation-mock]
path = "../delegation-mock"

[dev-dependencies.dharitri-sc-scenario]
version = "0.54.4"
